<resources>
    <string name="app_name">Yusuf_Mucahit_Solmaz_Final</string>
    <string name="favorite_item_deletion_dialog_text">Are you sure you want to delete?</string>
    <string name="favorite_item_deletion_dialog_positive_button">Yes</string>
    <string name="favorite_item_deletion_dialog_negative_button">No</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_category">Category</string>
    <string name="menu_detail">Product Detail</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings\n</string>
    <string name="change_language">Change Language</string>
    <string name="menu_logout">Logout</string>
    <string name="onboarding_title_1">Explore and Shop with Ease</string>
    <string name="onboarding_description_1">Step into FastBuy to explore and shop, your trusted guide where you can find every kind of product. Discover fashion, technology, home essentials, and more, and don\'t miss out on exclusive deals.</string>
    <string name="onboarding_title_2">Personalize Your Shopping Experience</string>
    <string name="onboarding_description_2">Personalize every shopping experience with FastBuy. Find products tailored to your needs, get recommendations, and keep track of your favorite items.</string>
    <string name="onboarding_title_3">Simplify Your Shopping</string>
    <string name="onboarding_description_3">Welcome to FastBuy, the app that simplifies your shopping experience. Browse thousands of options in fashion, electronics, home decor, and more, track discounts and promotions.</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="nickname">nickname</string>
    <string name="password">password</string>
    <string name="loginButton">Login</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="amount">Amount</string>
    <string name="delete_cart_confirmation">Are you sure you want to delete the cart?</string>
    <string name="delete_cart_confirmation_message">Cart Deleted Successfully</string>
    <string name="pay_confirmation">Are you sure you want to proceed with the transaction?</string>
    <string name="pay_confirmation_message">Transaction Successful</string>
    <string name="empty_cart_error">The cart is empty.</string>
    <string name="update_cart_error">Cart Couldn\'t Update</string>
    <string name="total">Total</string>
    <string name="in_stock">In Stock</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="out_of_stock">Quantity must be less than or equal to stock.</string>
    <string name="invalid_quantity">Please enter a valid quantity.</string>
    <string name="no_more_products">No more products.</string>
    <string name="profile_updated">Profile updated</string>
    <string name="background_color_updated">Background color updated successfully.</string>
    <string name="background_color_update_failed">Background Update Failed</string>
    <string name="logout_dialog_title">Are you sure you want to logout?</string>
    <string name="logout_dialog_message">Logged out successfully</string>
    <string name="english">ENGLISH</string>
    <string name="turkish">TURKISH</string>
    <string name="background_color">Choose Background Color</string>
    <string name="white">WHITE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="quantity_label">Quantity:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="pay_button">Pay</string>
    <string name="sale">Sale</string>
    <string name="all_products">All Products</string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Nu:</string>
    <string name="password_info">Password</string>
    <string name="update_profile_btn">Update</string>
    <string name="comments">Comments:</string>
    <string name="fav_empty_list_error">You haven\'t added any favorites yet.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>